log

Tue 12 Mar 2024 01:04:09 AM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:13:1: error: expected ‘;’, ‘,’ or ‘)’ before ‘{’ token
   13 | {
      | ^
Compilation failed
3f4f40e
Tue 12 Mar 2024 01:04:28 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
802db46
Tue 12 Mar 2024 01:07:08 AM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
6f4ee08
